--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -348,6 +348,9 @@ NETWORK_EVENT_SOURCES =						\
 STORAGE_EVENT_SOURCES =						\
                 conf/storage_event.c conf/storage_event.h
 
+INTERFACE_EVENT_SOURCES =					\
+                conf/interface_event.c conf/interface_event.h
+
 # Network driver generic impl APIs
 NETWORK_CONF_SOURCES =						\
 		conf/network_conf.c conf/network_conf.h \
@@ -399,6 +402,7 @@ CONF_SOURCES =							\
 		$(DOMAIN_EVENT_SOURCES)				\
 		$(NETWORK_EVENT_SOURCES)			\
 		$(STORAGE_EVENT_SOURCES)			\
+                $(INTERFACE_EVENT_SOURCES)			\
 		$(NETWORK_CONF_SOURCES)				\
 		$(NWFILTER_CONF_SOURCES)			\
 		$(NODE_DEVICE_CONF_SOURCES)			\
@@ -2369,6 +2373,7 @@ libvirt_setuid_rpc_client_la_SOURCES = 		\
 		conf/network_event.c		\
 		conf/object_event.c		\
 		conf/storage_event.c            \
+                conf/interface_event.c		\
 		rpc/virnetsocket.c		\
 		rpc/virnetsocket.h		\
 		rpc/virnetmessage.h		\
